--- a/personal_site/style.css
+++ b/personal_site/style.css
@@ -1,3 +1,5 @@
+
+/* Style for the Nav Bar */
 nav {
     position: sticky;
     top: 0;
@@ -34,7 +36,7 @@ nav {
     font-weight: 700;
   }
 
-
+  /*This is for mobile use only.  It will be hidden on desktop--> */  
   .burger-menu {
     color: blue;
     font-size: 2rem;
@@ -44,8 +46,7 @@ nav {
     display: none;
   }
 
-
-
+/* Style for the index page Content */
   .hero {
     display: flex;
     align-items: center;
@@ -76,9 +77,14 @@ nav {
     padding: 0.3rem 0;
   }
 
+  footer {
+    background-color: var(--bg-color);
+    padding: 1.25rem;
+    text-align: center;
+    margin: 2rem 0 0;
+  }
 
-
-
+/* Style for the About Page */
   .more-about {
     background-color: #fcfcfc;
     padding: 1rem 6rem;
@@ -94,9 +100,7 @@ nav {
     padding: 0.4rem;
   }
 
-
-  
-
+/* Style for the Portfolio Page */
   .projects {
     background-color:  #fcfcfc;
     padding: 32px 0;
